[NNO-11263] - Пользовательские настройки отображения таблицы