@@ -2,14 +2,13 @@ package net.n2oapp.framework.config.metadata.compile.toolbar;
 
 import net.n2oapp.framework.api.metadata.SourceMetadata;
 import net.n2oapp.framework.api.metadata.global.view.widget.table.N2oTable;
-import net.n2oapp.framework.api.metadata.global.view.widget.table.column.AbstractColumn;
+import net.n2oapp.framework.api.metadata.global.view.widget.table.column.N2oAbstractColumn;
 import net.n2oapp.framework.api.metadata.global.view.widget.table.column.N2oSimpleColumn;
 import net.n2oapp.framework.api.metadata.global.view.widget.table.column.cell.N2oToolbarCell;
 import net.n2oapp.framework.api.metadata.global.view.widget.toolbar.N2oButton;
 import net.n2oapp.framework.api.metadata.global.view.widget.toolbar.ToolbarItem;
 import net.n2oapp.framework.api.register.DynamicMetadataProvider;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class TestToolbarDynamicProvider implements DynamicMetadataProvider {
@@ -27,7 +26,7 @@ public class TestToolbarDynamicProvider implements DynamicMetadataProvider {
         N2oSimpleColumn idColumn = new N2oSimpleColumn();
         idColumn.setId("id");
         idColumn.setTextFieldId("id");
-        table.setColumns(new AbstractColumn[]{idColumn});
+        table.setColumns(new N2oAbstractColumn[]{idColumn});
         table.setId("testDynamic?Dummy");
 
         N2oToolbarCell toolbar = new N2oToolbarCell();
@@ -41,7 +40,7 @@ public class TestToolbarDynamicProvider implements DynamicMetadataProvider {
         N2oSimpleColumn n2oSimpleColumn = new N2oSimpleColumn();
         n2oSimpleColumn.setCell(toolbar);
         table.setColumns(new N2oSimpleColumn[]{n2oSimpleColumn});
-        return Arrays.asList(table);
+        return List.of(table);
     }
 
 }
